fix(breakpoints-mixins.scss): Reinstate .hide class for conditional visibility

--- a/src/scss/abstracts/_breakpoints-mixins.scss
+++ b/src/scss/abstracts/_breakpoints-mixins.scss
@@ -33,20 +33,24 @@ $breakpoints: (
 	}
 }
 
+.hide {
+	display: none !important;
+}
+
 @mixin iconSize($size) {
-	@if $size == 'xs' {
+	@if $size == "xs" {
 		width: 24px;
 		height: 24px;
-	} @else if $size == 'sm' {
+	} @else if $size == "sm" {
 		width: 32px;
 		height: 32px;
-	} @else if $size == 'med' {
+	} @else if $size == "med" {
 		width: 40px;
 		height: 40px;
-	} @else if $size == 'lg' {
+	} @else if $size == "lg" {
 		width: 56px;
 		height: 56px;
-	} @else if $size == 'xl' {
+	} @else if $size == "xl" {
 		width: 64px;
 		height: 64px;
 	}
